# retail-rfm-streamlit-dashboard

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  GIT_GUIDE.md  env_template.txt  main.py  pyproject.toml  requirements.txt
