[project]
name = "retail-rfm-streamlit-dashboard"
version = "0.1.0"
description = "RFM Analysis Dashboard for Retail Customer Segmentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "databricks-sql-connector>=3.0.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0"
]
